# panrec

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  hie.yaml  panrec.cabal
.circleci/: config.yml
.github/workflows/: haskell.yml
app/: Main.hs  Pipeline.hs
scripts/: cipublish  publish  test
src/Data/: Casing.hs  Parsers.hs  Primitive.hs  Record.hs  Record.hs~  RecordIO.hs  Scala.hs  Scala.hs~  Typescript.hs  TypescriptInterface.hs
test/: RoundTripSpec.hs  ScalaSpec.hs  Spec.hs  Types.hs  Types.hs~  TypescriptInterfaceSpec.hs  TypescriptSpec.hs
