name:                panrec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/panrec#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Data.Scala
                     , Data.Record
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable panrec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , panrec
  default-language:    Haskell2010

test-suite panrec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , panrec
                     , hspec >= 2.7.1 && < 2.8.0
                     , QuickCheck >= 2.13.1 && < 2.14
  other-modules:       Types

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/panrec
