name:                panrec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/panrec#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Casing
                     , Data.Parsers
                     , Data.Primitive
                     , Data.Record
                     , Data.RecordIO
                     , Data.Scala
                     , Data.Typescript
                     , Data.TypescriptInterface
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable panrec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Pipeline
  build-depends:       base
                     , panrec
                     , bytestring
                     , containers
                     , optparse-applicative >= 0.14.3 && < 0.15.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , AllowAmbiguousTypes
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications

test-suite panrec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , panrec
                     , attoparsec
                     , hspec >= 2.7.1 && < 2.8.0
                     , QuickCheck >= 2.13.1 && < 2.14
                     , bytestring
                     , raw-strings-qq
  other-modules:       Types
                     , RoundTripSpec
                     , ScalaSpec
                     , TypescriptSpec
                     , TypescriptInterfaceSpec

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  QuasiQuotes
                     , OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/panrec
